Adding the Heart Age Test to JSON.

--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
@@ -1,19 +1,25 @@
 {
     "tasks": [
               {
-              "taskTitle" : "Sleep Survey",              
+              "taskTitle" : "Sleep Survey",
               "taskID": "APHCustomizableSurvey-70D101B0-8135-4E47-8D2A-F810BE28D995",
               "taskType": "APHCustomizableSurvey",
               "fileName": "sleepSurvey",
               "taskClassName" : "APHSpecialSurveyTaskViewController"
+              },
+              {
+              "taskTitle" : "Heart Age Test",
+              "taskID": "APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF",
+              "taskType": "APHHeartAge",
+              "taskClassName" : "APHHeartAgeTaskViewController"
               }
               ],
     "schedules": [
                   {
                   "type": "REPEATING",
-                  "href": "appleparkinson:",
+                  "href": "applecardio",
                   "schedule": "1:1",
-                  "taskID": "APHCustomizableSurvey-70D101B0-8135-4E47-8D2A-F810BE28D995"
+                  "taskID": "APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF",
                   }
                   ]
 }
