Finished adding in the rest of the steps to the fitness test task. Tracking BPM using healthkit querying. Refactored Timer code into an object that can be reused.

--- a/CardioHealth/Info.plist
+++ b/CardioHealth/Info.plist
@@ -26,7 +26,9 @@
 	<string>Needed to measure your distance for some tasks.</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>bluetooth-central</string>
 		<string>fetch</string>
+		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
