--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
@@ -1,19 +1,32 @@
 {
     "tasks": [
               {
-              "taskTitle" : "Heart Age Test",
-              "taskID": "APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF",
-              "taskType": "APHHeartAge",
-              "taskClassName" : "APHHeartAgeTaskViewController"
+              "taskTitle": "Sleep Survey",
+              "taskID": "APHCustomizableSurvey-70D101B0-8135-4E47-8D2A-F810BE28D995",
+              "taskType": "APHCustomizableSurvey",
+              "fileName": "sleepSurvey",
+              "taskClassName": "APHSpecialSurveyTaskViewController"
               },
               {
-              "taskTitle" : "Fitness Test",
+              "taskTitle": "Heart Age Test",
+              "taskID": "APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF",
+              "taskType": "APHHeartAge",
+              "taskClassName": "APHHeartAgeTaskViewController"
+              },
+              {
+              "taskTitle": "Fitness Test",
               "taskID": "APHFitnessTest-00000000-1111-1111-1111-F810BE28D995",
               "taskType": "APHFitnessTest",
-              "taskClassName" : "APHFitnessTaskViewController"
+              "taskClassName": "APHFitnessTaskViewController"
               }
               ],
     "schedules": [
+                  {
+                  "type": "REPEATING",
+                  "href": "appleparkinson:",
+                  "schedule": "1:1",
+                  "taskID": "APHCustomizableSurvey-70D101B0-8135-4E47-8D2A-F810BE28D995"
+                  },
                   {
                   "type": "REPEATING",
                   "href": "appleparkinson:",
