--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
@@ -3,52 +3,44 @@
               {
               "taskTitle": "Heart Age Test",
               "taskID": "APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF",
-              "taskType": "APHHeartAge",
               "taskClassName": "APHHeartAgeTaskViewController"
               },
               {
               "taskTitle": "Fitness Test",
               "taskID": "APHFitnessTest-00000000-1111-1111-1111-F810BE28D995",
-              "taskType": "APHFitnessTest",
               "taskClassName": "APHFitnessTaskViewController"
               },
               {
               "taskTitle": "7 Day Fitness Allocation",
               "taskID": "APHSevenDayAllocation-00000000-1111-1111-1111-F810BE28D995",
-              "taskType": "APHSevenDayAllocation",
               "taskClassName": "APHSevenDayFitnessAllocationTaskViewController"
               },
               {
               "taskTitle": "Healthy Heart",
               "taskID": "APHHealthyHeart-7259AC18-D711-47A6-ADBD-6CFCECDED1DF",
-              "taskType": "APHHealthyHeart",
               "taskClassName": "APHHealthyHeartTaskViewController"
               }
               ],
     "schedules": [
                   {
-                  "type": "REPEATING",
-                  "href": "appleparkinson:",
-                  "schedule": "1:2",
+                  "scheduleType": "recurring",
+                  "scheduleString": "0 5 * * *",
                   "taskID": "APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF"
                   },
                   {
-                  "type": "REPEATING",
-                  "href": "appleparkinson:",
-                  "schedule": "1:3",
+                  "scheduleType": "recurring",
+                  "scheduleString": "0 5 * * *",
                   "taskID": "APHFitnessTest-00000000-1111-1111-1111-F810BE28D995"
                   },
                   {
-                  "type": "REPEATING",
-                  "href": "applecardio:",
-                  "schedule": "1:7",
-                  "taskID": "APHSevenDayAllocation-00000000-1111-1111-1111-F810BE28D995"
+                  "scheduleType": "recurring",
+                  "scheduleString": "0 5 * * *",
+                  "taskID": "APHHealthyHeart-7259AC18-D711-47A6-ADBD-6CFCECDED1DF"
                   },
                   {
-                  "type": "REPEATING",
-                  "href": "appleparkinson:",
-                  "schedule": "1:2",
-                  "taskID": "APHHealthyHeart-7259AC18-D711-47A6-ADBD-6CFCECDED1DF"
+                  "scheduleType": "recurring",
+                  "scheduleString": "0 5 * * *",
+                  "taskID": "APHSevenDayAllocation-00000000-1111-1111-1111-F810BE28D995"
                   }
                   ]
 }
