--- a/CardioHealth/Info.plist
+++ b/CardioHealth/Info.plist
@@ -10,6 +10,8 @@
 	<string>com.ymedialabs.enterprise.Cardiovascular</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleDisplayName</key>
+	<string>MyHeart</string>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
