[APPLE-2356] Updating fitness instruction text and PAR-Q title.
[APPLE-2356] Updating fitness instruction text and PAR-Q title. Removing the word 'monitor' and replacing with 'record'. And updating the PAR-Q title to Physical Activity Readiness.

--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
@@ -50,7 +50,7 @@
               },
               
               {
-              "taskTitle" : "PAR-Q Quiz",
+              "taskTitle" : "Physical Activity Readiness",
               "taskID": "parqquiz-1E174061-5B02-11E4-8ED6-0800200C9A77",
               "taskClassName" : "APHParQQuizTaskViewController"
               },
