[APPLE-2356] Updating the heart and risk score with heart age title.

--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
@@ -1,7 +1,7 @@
 {
     "tasks": [
               {
-              "taskTitle": "Heart and Stroke Risk Score, Plus Heart Age",
+              "taskTitle": "Heart/Stroke Risk Score + Heart Age",
               "taskID": "APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF",
               "taskClassName": "APHHeartAgeTaskViewController"
               },
