[APPLE-2496] Update appCore submodule. Add Day One task.
[APPLE-2496] Update appCore submodule. Add Day One task. Clean up 7 Day dashboard item and remove unused code.

--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
@@ -77,6 +77,13 @@
               "taskFileName" : "cardio_daily_check",
               "taskClassName" : "APCGenericSurveyTaskViewController",
               "taskCompletionTimeString" : "10 Questions"
+              },
+              {
+              "taskTitle" : "Day One Check-in",
+              "taskID": "DayOne-be42dc21-4706-478a-a398-10cabb9c7d78",
+              "taskFileName" : "cardio_day_one",
+              "taskClassName" : "APCGenericSurveyTaskViewController",
+              "taskCompletionTimeString" : "3 Questions"
               }
               
               ],
@@ -134,6 +141,11 @@
                   "scheduleType": "once",
                   "scheduleString": "0 5 * * *",
                   "taskID": "WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C0000"
+                  },
+                  {
+                  "scheduleType": "once",
+                  "scheduleString": "0 5 * * *",
+                  "taskID": "DayOne-be42dc21-4706-478a-a398-10cabb9c7d78"
                   }
                   
                   ]
