--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules_NoM7.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules_NoM7.json
@@ -1,134 +1,145 @@
 {
     "tasks": [
               {
-              "taskTitle": "Heart and Stroke Risk Score, Plus Heart Age",
+              "taskTitle": "Heart/Stroke Risk Score + Heart Age",
               "taskID": "APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF",
               "taskClassName": "APHHeartAgeTaskViewController",
-              "taskCompletionTimeString": "9 Questions"
+              "taskCompletionTimeString" : "9 Questions"
               },
               {
               "taskTitle": "Heart and Stroke Risk Score",
-              "taskID": "APHHeartAgeB-7259AC18-D711-47A6-ADBD-6CFCECDED1DF",
+              "taskID": "2-APHHeartAgeB-7259AC18-D711-47A6-ADBD-6CFCECDED1DF",
               "taskClassName": "APHHeartAgeTaskViewController",
-              "taskCompletionTimeString": "9 Questions"
+              "taskCompletionTimeString" : "9 Questions"
               },
               {
               "taskTitle": "6-Minute Walk Test",
-              "taskID": "APHFitnessTest-00000000-1111-1111-1111-F810BE28D995",
+              "taskID": "3-APHFitnessTest-00000000-1111-1111-1111-F810BE28D995",
               "taskClassName": "APHFitnessTaskViewController",
-              "taskCompletionTimeString": "6-9 Minutes"
+              "taskCompletionTimeString" : "6-9 Minutes"
               },
               {
-              "taskTitle": "Activity and Sleep Survey",
-              "taskID": "CardioActivityAndSleepSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
-              "taskFileName": "cardio_activitysleep_survey",
-              "taskClassName": "APCGenericSurveyTaskViewController",
-              "taskCompletionTimeString": "8 Questions"
+              "taskTitle": "7-Day Activity and Sleep Assessment",
+              "taskID": "3-APHSevenDayAllocation-00000000-1111-1111-1111-F810BE28D995",
+              "taskClassName": "APHSevenDayFitnessAllocationTaskViewController"
+              },
+              
+              {
+              "taskTitle" : "Activity and Sleep Survey",
+              "taskID": "2-CardioActivityAndSleepSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
+              "taskFileName" : "cardio_activitysleep_survey",
+              "taskClassName" : "APCGenericSurveyTaskViewController",
+              "taskCompletionTimeString" : "8 Questions"
+              },
+              
+              {
+              "taskTitle" : "Cardiovascular Health Survey",
+              "taskID": "3-CardioVascularHealthSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
+              "taskFileName" : "cardio_CVhealth_survey",
+              "taskClassName" : "APHCardiovascularHealthSurveyController",
+              "taskCompletionTimeString" : "4 Questions"
+              },
+              
+              {
+              "taskTitle" : "Diet Survey",
+              "taskID": "4-DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
+              "taskFileName" : "cardio_diet_survey",
+              "taskClassName" : "APCGenericSurveyTaskViewController",
+              "taskCompletionTimeString" : "6 Questions"
+              },
+              
+              {
+              "taskTitle" : "Well-Being and Risk Perception Survey",
+              "taskID": "2-WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
+              "taskFileName" : "cardio_wellbeing_survey",
+              "taskClassName" : "APHWellBeingSurveyController",
+              "taskCompletionTimeString" : "(One Time) 10 Questions Part 1"
+              },
+              
+              {
+              "taskTitle" : "Well-Being and Risk Perception Survey",
+              "taskID": "5-WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C0000",
+              "taskFileName" : "cardio_wellbeing_survey",
+              "taskClassName" : "APHWellBeingSurveyController",
+              "taskCompletionTimeString" : "(One Time) 10 Questions Part 2"
+              },
+              
+              {
+              "taskTitle" : "Physical Activity Readiness",
+              "taskID": "1-parqquiz-1E174061-5B02-11E4-8ED6-0800200C9A77",
+              "taskClassName" : "APHParQQuizTaskViewController",
+              "taskCompletionTimeString" : "10 Questions"
+              },
+              
+              {
+              "taskTitle" : "Daily Check-in",
+              "taskID": "1-DailyCheckin-be42dc21-4706-478a-a398-10cabb9c7d78",
+              "taskFileName" : "cardio_daily_check",
+              "taskClassName" : "APCGenericSurveyTaskViewController",
+              "taskCompletionTimeString" : "10 Questions"
               },
               {
-              "taskTitle": "Cardiovascular Health Survey",
-              "taskID": "CardioVascularHealthSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
-              "taskFileName": "cardio_CVhealth_survey",
-              "taskClassName": "APHCardiovascularHealthSurveyController",
-              "taskCompletionTimeString": "4 Questions"
-              },
-              {
-              "taskTitle": "Diet Survey",
-              "taskID": "DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
-              "taskFileName": "cardio_diet_survey",
-              "taskClassName": "APCGenericSurveyTaskViewController",
-              "taskCompletionTimeString": "6 Questions"
-              },
-              {
-              "taskTitle": "Well-Being and Risk Perception Survey",
-              "taskID": "WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
-              "taskFileName": "cardio_wellbeing_survey",
-              "taskClassName": "APHWellBeingSurveyController",
-              "taskCompletionTimeString": "10 Questions Part 1"
-              },
-              {
-              "taskTitle": "Well-Being and Risk Perception Survey",
-              "taskID": "WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C0000",
-              "taskFileName": "cardio_wellbeing_survey",
-              "taskClassName": "APHWellBeingSurveyController",
-              "taskCompletionTimeString": "10 Questions Part 2"
-              },
-              {
-              "taskTitle": "Physical Activity Readiness",
-              "taskID": "parqquiz-1E174061-5B02-11E4-8ED6-0800200C9A77",
-              "taskClassName": "APHParQQuizTaskViewController",
-              "taskCompletionTimeString": "10 Questions"
-              },
-              {
-              "taskTitle": "Daily Check-in",
-              "taskID": "be42dc21-4706-478a-a398-10cabb9c7d78",
-              "taskFileName": "cardio_daily_check",
-              "taskClassName": "APCGenericSurveyTaskViewController",
-              "taskCompletionTimeString": "10 Questions"
-              },
-              {
-              "taskTitle": "Day One Check-in",
-              "taskID": "DayOne-be42dc21-4706-478a-a398-10cabb9c7d78",
-              "taskFileName": "cardio_day_one",
-              "taskClassName": "APCGenericSurveyTaskViewController",
-              "taskCompletionTimeString": "3 Questions"
+              "taskTitle" : "Day One Check-in",
+              "taskID": "4-DayOne-be42dc21-4706-478a-a398-10cabb9c7d78",
+              "taskFileName" : "cardio_day_one",
+              "taskClassName" : "APCGenericSurveyTaskViewController",
+              "taskCompletionTimeString" : "(One Time) 3 Questions"
               }
+              
               ],
     "schedules": [
                   {
                   "scheduleType": "recurring",
                   "scheduleString": "0 5 * * *",
-                  "taskID": "be42dc21-4706-478a-a398-10cabb9c7d78"
+                  "taskID": "1-DailyCheckin-be42dc21-4706-478a-a398-10cabb9c7d78"
                   },
                   {
                   "scheduleType": "recurring",
                   "scheduleString": "0 5 * * *",
-                  "taskID": "parqquiz-1E174061-5B02-11E4-8ED6-0800200C9A77"
+                  "taskID": "1-parqquiz-1E174061-5B02-11E4-8ED6-0800200C9A77"
+                  },
+                  
+                  {
+                  "scheduleType": "recurring",
+                  "scheduleString": "0 5 * * *",
+                  "taskID": "2-APHHeartAgeB-7259AC18-D711-47A6-ADBD-6CFCECDED1DF"
                   },
                   {
                   "scheduleType": "recurring",
                   "scheduleString": "0 5 * * *",
-                  "taskID": "APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF"
+                  "taskID": "3-APHFitnessTest-00000000-1111-1111-1111-F810BE28D995"
                   },
                   {
                   "scheduleType": "recurring",
                   "scheduleString": "0 5 * * *",
-                  "taskID": "APHFitnessTest-00000000-1111-1111-1111-F810BE28D995"
+                  "taskID": "2-CardioActivityAndSleepSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
                   },
                   {
                   "scheduleType": "recurring",
                   "scheduleString": "0 5 * * *",
-                  "taskID": "CardioActivityAndSleepSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
+                  "taskID": "3-CardioVascularHealthSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
                   },
                   {
                   "scheduleType": "recurring",
                   "scheduleString": "0 5 * * *",
-                  "taskID": "CardioVascularHealthSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
-                  },
-                  {
-                  "scheduleType": "recurring",
-                  "scheduleString": "0 5 * * *",
-                  "taskID": "DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
-                  },
-                  {
-                  "scheduleType": "recurring",
-                  "scheduleString": "0 5 * * *",
-                  "taskID": "WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
+                  "taskID": "4-DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
                   },
                   {
                   "scheduleType": "once",
                   "scheduleString": "0 5 * * *",
-                  "taskID": "WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
+                  "taskID": "2-WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
+                  },
+                  
+                  {
+                  "scheduleType": "once",
+                  "scheduleString": "0 5 * * *",
+                  "taskID": "5-WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C0000"
                   },
                   {
                   "scheduleType": "once",
                   "scheduleString": "0 5 * * *",
-                  "taskID": "WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C0000"
-                  },
-                  {
-                  "scheduleType": "once",
-                  "scheduleString": "0 5 * * *",
-                  "taskID": "DayOne-be42dc21-4706-478a-a398-10cabb9c7d78"
+                  "taskID": "4-DayOne-be42dc21-4706-478a-a398-10cabb9c7d78"
                   }
+                  
                   ]
 }
