--- a/CardioHealth/Info.plist
+++ b/CardioHealth/Info.plist
@@ -28,8 +28,8 @@
 	<string></string>
 	<key>UIBackgroundModes</key>
 	<array>
-		<string>bluetooth-central</string>
 		<string>fetch</string>
+		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
