--- a/CardioHealth/Info.plist
+++ b/CardioHealth/Info.plist
@@ -28,6 +28,7 @@
 	<string></string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>fetch</string>
 		<string>location</string>
 	</array>
