--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
@@ -7,12 +7,6 @@
               "taskCompletionTimeString" : "9 Questions"
               },
               {
-              "taskTitle": "Heart and Stroke Risk Score",
-              "taskID": "2-APHHeartAgeB-7259AC18-D711-47A6-ADBD-6CFCECDED1DF",
-              "taskClassName": "APHHeartAgeTaskViewController",
-              "taskCompletionTimeString" : "9 Questions"
-              },
-              {
               "taskTitle": "6-Minute Walk Test",
               "taskID": "3-APHFitnessTest-00000000-1111-1111-1111-F810BE28D995",
               "taskClassName": "APHFitnessTaskViewController",
@@ -90,7 +84,7 @@
     "schedules": [
                   {
                   "scheduleType": "recurring",
-                  "scheduleString": "0 5 * * *",
+                  "scheduleString": "0 0 * * *",
                   "taskID": "1-DailyCheckin-be42dc21-4706-478a-a398-10cabb9c7d78"
                   },
                   
@@ -111,17 +105,14 @@
                   },
                   {
                   "scheduleType": "once",
-                  "scheduleString": "0 5 * * *",
                   "taskID": "2-CardioActivityAndSleepSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
                   },
                   {
-                  "scheduleType": "recurring",
-                  "scheduleString": "0 5 * * *",
+                  "scheduleType": "once",
                   "taskID": "3-CardioVascularHealthSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
                   },
                   {
-                  "scheduleType": "recurring",
-                  "scheduleString": "0 5 * * *",
+                  "scheduleType": "once",
                   "taskID": "4-DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
                   },
                   {
