[APPLE-2712] Restructure project.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "AppCore"]
 	path = AppCore
 	url = https://bitbucket.org/ymedialabs/applecore.git
+[submodule "researchkit"]
+	path = researchkit
+	url = https://bitbucket.org/ymedialabs/researchkit.git
