[APPLE-2496] Updates to migration code. Handling deletion of old, unused scheduledtasks.

--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
@@ -89,10 +89,12 @@
                   },
                   
                   {
+                  "expire" : "P89D",
                   "scheduleType": "once",
                   "taskID": "2-APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF"
                   },
                   {
+                  "expire" : "P89D",
                   "scheduleType": "once",
                   "taskID": "3-APHFitnessTest-00000000-1111-1111-1111-F810BE28D995"
                   },
