--- a/CardioHealth.xcodeproj/xcshareddata/xcschemes/CardioHealthUsingDataVerificationServer.xcscheme
+++ b/CardioHealth.xcodeproj/xcshareddata/xcschemes/CardioHealthUsingDataVerificationServer.xcscheme
@@ -5,28 +5,12 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "NO"
-            buildForRunning = "NO"
-            buildForProfiling = "YES"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "F5F644F819D35BA2004CFBB2"
-               BuildableName = "CardioHealth.app"
-               BlueprintName = "CardioHealth"
-               ReferencedContainer = "container:CardioHealth.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
    </BuildAction>
    <TestAction
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      buildConfiguration = "DebugAndSendToDataVerificationServer">
       <Testables>
       </Testables>
       <MacroExpansion>
@@ -65,7 +49,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
+      buildConfiguration = "DebugAndSendToDataVerificationServer"
       debugDocumentVersioning = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
@@ -79,7 +63,7 @@
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug">
+      buildConfiguration = "DebugAndSendToDataVerificationServer">
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
