[APPLE-2888] Modifiying the base JSON files
in order to disable schedule offsets.

--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules_NoM7.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules_NoM7.json
@@ -32,7 +32,7 @@
               "taskTitle" : "Diet Survey",
               "taskID": "4-DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
               "taskFileName" : "cardio_diet_survey",
-              "taskClassName" : "APCGenericSurveyTaskViewController",
+              "taskClassName" : "APHDietSurveyViewController",
               "taskCompletionTimeString" : "6 Questions"
               },
               
@@ -101,7 +101,8 @@
                   "taskID": "3-CardioVascularHealthSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
                   },
                   {
-                  "scheduleType": "once",
+                  "scheduleType": "recurring",
+                  "scheduleString": "0 5 * * *",
                   "taskID": "4-DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
                   },
                   {
