--- a/CardioHealth/Info.plist
+++ b/CardioHealth/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.ymedialabs.enterprise.MyHeartCounts</string>
+	<string>edu.stanford.MyHeartCounts</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
