Revert "[APPLE-2888] Modifiying the base JSON files"
This reverts commit 7401252604ace71ab75b3be1dcf830c9c964ec1d.

# Conflicts:
#	CardioHealth/Startup/APHAppDelegate.m

--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules_NoM7.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules_NoM7.json
@@ -32,7 +32,7 @@
               "taskTitle" : "Diet Survey",
               "taskID": "4-DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
               "taskFileName" : "cardio_diet_survey",
-              "taskClassName" : "APHDietSurveyViewController",
+              "taskClassName" : "APCGenericSurveyTaskViewController",
               "taskCompletionTimeString" : "6 Questions"
               },
               
@@ -101,8 +101,7 @@
                   "taskID": "3-CardioVascularHealthSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
                   },
                   {
-                  "scheduleType": "recurring",
-                  "scheduleString": "0 5 * * *",
+                  "scheduleType": "once",
                   "taskID": "4-DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
                   },
                   {
