--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
@@ -38,7 +38,7 @@
               "taskTitle" : "Diet Survey",
               "taskID": "4-DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
               "taskFileName" : "cardio_diet_survey",
-              "taskClassName" : "APCGenericSurveyTaskViewController",
+              "taskClassName" : "APHDietSurveyViewController",
               "taskCompletionTimeString" : "6 Questions"
               },
               
@@ -89,13 +89,13 @@
                   },
                   
                   {
-                  "scheduleType": "recurring",
-                  "scheduleString": "0 5 * * *",
+                  "expire" : "P89D",
+                  "scheduleType": "once",
                   "taskID": "2-APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF"
                   },
                   {
-                  "scheduleType": "recurring",
-                  "scheduleString": "0 5 * * *",
+                  "expire" : "P89D",
+                  "scheduleType": "once",
                   "taskID": "3-APHFitnessTest-00000000-1111-1111-1111-F810BE28D995"
                   },
                   {
