--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
@@ -22,6 +22,22 @@
                                        "taskCompletionTimeString" : "6-9 Minutes"
                                        }]
                   },
+                  
+                  
+                  {
+                  "scheduleType"    : "recurring",
+                  "scheduleString"  : "0 5 * * *",
+                  "interval"        : "P1D",
+                  "tasks"           : [{
+                                       "taskTitle": "6-Minute Walk Test",
+                                       "taskID": "3-OptionalAPHFitnessTest-00000000-1111-1111-1111-F810BE28D995",
+                                       "taskClassName": "APHFitnessTaskViewController",
+                                       "taskCompletionTimeString" : "6-9 Minutes"
+                                       }]
+                  },
+                  
+                  
+                  
                   {
                   "scheduleType"    : "recurring",
                   "scheduleString"  : "0 5 * * *",
